--- a/main.html
+++ b/main.html
@@ -1,4 +1,18 @@
 <head></head>
 <body>
   <h1>My Todos</h1>
+  <ul></ul>
 </body>
+
+<script>
+  const electron = require("electron");
+  const { ipcRenderer } = electron;
+
+  ipcRenderer.on("todo:add", (event, todo) => {
+    const li = document.createElement("li");
+    const text = document.createTextNode(todo); //will contain text from todo
+
+    li.appendChild(text);
+    document.querySelector("ul").appendChild(li);
+  });
+</script>
