--- a/main.html
+++ b/main.html
@@ -1,18 +1,26 @@
 <head></head>
 <body>
   <h1>My Todos</h1>
+  <hr />
   <ul></ul>
 </body>
 
 <script>
   const electron = require("electron");
   const { ipcRenderer } = electron;
+  const list = document.querySelector("ul");
 
   ipcRenderer.on("todo:add", (event, todo) => {
     const li = document.createElement("li");
     const text = document.createTextNode(todo); //will contain text from todo
 
     li.appendChild(text);
-    document.querySelector("ul").appendChild(li);
+    // document.querySelector("ul").appendChild(li);
+    list.appendChild(li);
+  });
+
+  ipcRenderer.on("todo:clear", () => {
+    // document.querySelector("ul").innerHTML = "";
+    list.innerHTML = "";
   });
 </script>
